2004-10-16	Florian Boor <florian.boor@kernelconcepts.de>

	* Released V 0.2.6
	* filesel*: Fixed declaration to avoid warning.
	  dbus.h: Fixed another declaration.
	  vcard-export.c: Fixed another warning.
	* main.c: main() Make sure correct menu item is shown.
	          Improved icon rendering.
	* Makefile: Added icon files.
	* Removed gpe-beam.desktop from cvs. (generated file)
	* Makefile: New version.
	* pixmaps/*48*: New larger icon files.
	* main.c: Some minor fixes to correct icon display
	          Support for larger icons if panel is large enough.
			  
	* Released V 0.2.5
	
2004-10-14	Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Implemented transmit of personal vcard.
	          Added displaying of connection status.
	* Makefile: New icon added. Changed version number.
	* pixmaps/irda-conn-16.png: New icon.

2004-10-13	Florian Boor <florian.boor@kernelconcepts.de>

	* irsw.c: Fixed path causing ifconfig not called to bring device down.
	* Released V 0.2.4
	* obexclient-dbus.c, dbus.[c/h]: New files for irobex transfer service.
	* Makefile: Install irsw suid, some minor fixes.
	            Added dbus libraries and new files.
	* main.c: Fixed icon size.
	          send_data(): hack to send vcard data received via dbus.
	* irsw.c: Run irattach before activating irda.

2004-09-29	Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Honor PREFIX in calls to irsw.

2004-08-22	Florian Boor <florian.boor@kernelconcepts.de>
	
	* Released V 0.2.3
	* main.c: Added resizing capabilities.
	* po: Added some translation files.
	* Makefile: V 0.2.3, update to latest standards (OE).
	* main.c: Include PREFIX to icon paths. Minor fixes.

2004-06-21	Florian Boor <florian.boor@kernelconcepts.de>
	* Added Spanish translation.

2004-03-08	Florian Boor <florian.boor@kernelconcepts.de>
	* Added Serbian translation.	

2004-02-23  Phil Blundell  <pb@nexus.co.uk>

	* vcard-import.c: Rewrite with libgpevtype.

2004-02-16  Phil Blundell  <pb@nexus.co.uk>
