@@ -1,3 +1,9 @@
+2004-10-17  Phil Blundell  <pb@nexus.co.uk>
+
+	* vcard-export.c, vcard-import.c, vcal-export.c: Moved to
+	vtype-utils package.
+	* Makefile: Remove references to these files.
+
 2004-10-16	Florian Boor <florian.boor@kernelconcepts.de>
 
 	* Released V 0.2.6
